src/objects/TaxIncreaseInfo__mdt.object
<CustomObject>
    <description>利用日は該当定義の日付期間の場合、明細入力場合消費税額は該当定義の税率により、自動計算、明細に自動追加する</description>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FilterMstCode__c</fullName>
        <inlineHelpText>2%消費税明細計算対象外商品コードを定義、複数指定場合、カンマ「,」連結で定義可能
例：商品コード「8001,8002,8003」を登録場合、該当３商品が明細に登録しても、該当金額も2%消費税計算対象外</inlineHelpText>
        <label>対象外商品</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoundType__c</fullName>
        <defaultValue>TEXT($Setup.CommDefine__c.RoundType__c)</defaultValue>
        <inlineHelpText>2%消費税金の端数処理区分を定義する、指定されない場合、共通定義の「会計税の端数処理」で計算する</inlineHelpText>
        <label>端数処理</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>切り捨て</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>四捨五入</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>切り上げ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxIncMstCode__c</fullName>
        <inlineHelpText>差分税明細自動作成用会計商品コードを定義する、注意：該当会計商品を定義する場合、消費税、サビース、単価は全部０に定義してください</inlineHelpText>
        <label>差分税率用商品コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxIncRate__c</fullName>
        <inlineHelpText>差分税率Xパーセントを定義する、例：2%税率を定義したい場合、該当項目に2を入力する</inlineHelpText>
        <label>差分税率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>消費税差分税率定義</label>
</CustomObject>